fix: integrate jest inside offix-client

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,20 +3,36 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
-    "type": "node",
-    "request": "launch",
-    "name": "Offix Client Mocha Tests",
-    "program": "${workspaceFolder}/packages/offix-client/node_modules/mocha/bin/_mocha",
-    "args": [
-      "-r",
-      "ts-node/register",
-      "--timeout",
-      "999999",
-      "--colors",
-      "${workspaceFolder}/packages/offix-client/test/*.ts"
-    ],
-    "console": "integratedTerminal",
-    "protocol": "inspector"
-  }]
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Offix Client Mocha Tests",
+      "program": "${workspaceFolder}/packages/offix-client/node_modules/mocha/bin/_mocha",
+      "args": [
+        "-r",
+        "ts-node/register",
+        "--timeout",
+        "999999",
+        "--colors",
+        "${workspaceFolder}/packages/offix-client/test/*.ts"
+      ],
+      "console": "integratedTerminal",
+      "protocol": "inspector"
+    },
+    {
+      "name": "Debug Jest Tests",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/packages/offix-client",
+      "runtimeArgs": [
+        "--inspect-brk",
+        "${workspaceRoot}/packages/offix-client/node_modules/.bin/jest",
+        "--runInBand"
+      ],
+      // "console": "integratedTerminal",
+      // "internalConsoleOptions": "neverOpen",
+      "port": 9229
+    }
+  ]
 }
