--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -8,7 +8,7 @@
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map dist types",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "mocha",
+    "test": "jest",
     "preintegration-test": "cd integration_test && yarn install",
     "integration-test": "cd integration_test && yarn run test"
   },
@@ -26,14 +26,18 @@
     "@types/debug": "4.1.4",
     "@types/fetch-mock": "7.3.1",
     "@types/graphql": "14.2.2",
+    "@types/jest": "^24.0.18",
     "@types/mocha": "5.2.7",
     "@types/ws": "6.0.1",
     "chai": "4.2.0",
     "del": "5.0.0",
+    "fake-indexeddb": "^2.1.1",
     "fetch-mock": "7.3.9",
     "graphql": "14.4.2",
     "graphql-tag": "2.10.1",
+    "jest": "^24.9.0",
     "mocha": "6.2.0",
+    "ts-jest": "^24.1.0",
     "ts-node": "8.3.0",
     "typescript": "3.5.3"
   },
