--- a/packages/offix-client/tsconfig.json
+++ b/packages/offix-client/tsconfig.json
@@ -6,6 +6,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "declarationDir": "./types",
+    "types": ["jest"],
     "lib": [
       "esnext.asynciterable",
       "es2015",
