--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "devDependencies": {
     "@types/graphql": "14.2.2",
-    "graphql": "14.4.2",
+    "@types/jest": "^24.0.18",
     "coveralls": "3.0.5",
+    "cross-fetch": "^3.0.4",
     "del-cli": "3.0.0",
+    "graphql": "14.4.2",
     "lerna": "3.16.4",
     "npm-run-all": "4.1.5",
     "nyc": "14.1.1",
@@ -41,7 +43,8 @@
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "@types/mocha": "5.2.7"
+    "@types/mocha": "5.2.7",
+    "@types/node": "^12.7.5"
   },
   "nyc": {
     "extension": [
