--- a/packages/offix-cache/package.json
+++ b/packages/offix-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-cache",
-  "version": "0.8.2",
+  "version": "0.9.2-dev1",
   "description": "GraphQL Mutation and Subscription Helpers",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
