--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-client",
-  "version": "0.8.2",
+  "version": "0.9.2-dev1",
   "description": "Offix GraphQL Offline Client",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -51,8 +51,8 @@
     "apollo-link-retry": "2.2.15",
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
-    "offix-cache": "0.8.2",
-    "offix-offline": "0.8.2"
+    "offix-cache": "0.9.2-dev1",
+    "offix-offline": "0.9.2-dev1"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
