--- a/packages/react-offix-hooks/package.json
+++ b/packages/react-offix-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-offix-hooks",
-  "version": "0.8.2",
+  "version": "0.9.2-dev1",
   "description": "Use offix-client in react hooks",
   "keywords": [
     "offix",
@@ -38,7 +38,7 @@
   "dependencies": {
     "@types/lodash": "4.14.141",
     "lodash": "4.17.15",
-    "offix-client": "0.8.2"
+    "offix-client": "0.9.2-dev1"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0",
