--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -8,7 +8,7 @@
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map dist types",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "preintegration-test": "cd integration_test && npm install",
     "integration-test": "cd integration_test && npm test"
   },
@@ -24,6 +24,7 @@
     "@types/debug": "4.1.5",
     "@types/graphql": "14.2.3",
     "del": "5.1.0",
+    "fake-indexeddb": "^2.1.1",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "jest": "^24.9.0",
