--- a/packages/offix-conflicts-server/package.json
+++ b/packages/offix-conflicts-server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc --build tsconfig.json",
         "watch": "tsc --build tsconfig.json --watch",
-        "test": "ava",
+        "test": "jest",
         "compile:clean": "tsc --build tsconfig.json --clean"
     },
     "license": "Apache-2.0",
@@ -14,21 +14,12 @@
         "type": "git",
         "url": "git+https://github.com/aerogear/offix.git"
     },
-    "ava": {
-        "compileEnhancements": false,
-        "extensions": [
-            "ts"
-        ],
-        "require": [
-            "ts-node/register"
-        ],
-        "files": [
-            "./test/**/*.test.ts"
-        ]
-    },
     "devDependencies": {
-        "ava": "2.4.0",
+        "@types/jest": "^24.0.18",
+        "@types/node": "^12.7.12",
         "graphql": "14.5.8",
+        "jest": "^24.9.0",
+        "ts-jest": "^24.1.0",
         "ts-node": "8.4.1",
         "typescript": "3.6.3"
     },
