--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/debug": "4.1.5",
     "@types/graphql": "14.2.3",
+    "@types/jest": "^24.0.18",
     "del": "5.1.0",
     "fake-indexeddb": "^2.1.1",
     "graphql": "14.5.8",
