--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -8,9 +8,7 @@
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map dist types",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "jest",
-    "preintegration-test": "cd integration_test && yarn install",
-    "integration-test": "cd integration_test && yarn run test"
+    "test": "jest"
   },
   "license": "Apache-2.0",
   "repository": {
@@ -22,21 +20,17 @@
   },
   "devDependencies": {
     "@types/apollo-upload-client": "8.1.3",
-    "@types/chai": "4.2.3",
     "@types/debug": "4.1.5",
     "@types/fetch-mock": "7.3.1",
     "@types/graphql": "14.2.3",
     "@types/jest": "24.0.18",
-    "@types/mocha": "5.2.7",
     "@types/ws": "6.0.3",
-    "chai": "4.2.0",
     "del": "5.1.0",
     "fake-indexeddb": "2.1.1",
     "fetch-mock": "7.5.1",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "jest": "24.9.0",
-    "mocha": "6.2.1",
     "ts-jest": "24.1.0",
     "ts-node": "8.4.1",
     "typescript": "3.6.4"
