--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "examples/*",
     "packages/*"
   ],
-  "version": "0.9.2-dev2",
+  "version": "0.9.0",
   "command": {
     "publish": {
       "exact": true
