--- a/packages/offix-conflicts-server/package.json
+++ b/packages/offix-conflicts-server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "offix-conflicts-server",
-    "version": "0.9.2-dev2",
+    "version": "0.9.0",
     "description": "Offix GraphQL server",
     "main": "dist/index.js",
     "scripts": {
