--- a/packages/offix-scheduler/package.json
+++ b/packages/offix-scheduler/package.json
@@ -8,7 +8,7 @@
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map dist types",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --verbose --detectOpenHandles"
   },
   "license": "Apache-2.0",
   "repository": {
@@ -20,9 +20,13 @@
   },
   "devDependencies": {
     "@types/jest": "24.0.22",
+    "@types/json-server": "^0.14.2",
+    "@types/node-fetch": "^2.5.3",
     "del": "5.1.0",
     "fake-indexeddb": "^2.1.1",
     "jest": "24.9.0",
+    "json-server": "^0.15.1",
+    "node-fetch": "^2.6.0",
     "ts-jest": "24.1.0",
     "ts-node": "8.4.1",
     "typescript": "3.7.2"
