--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -48,7 +48,8 @@
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
     "offix-cache": "0.9.0",
-    "offix-offline": "0.9.0"
+    "offix-offline": "0.9.0",
+    "offix-scheduler": "0.9.0"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
