--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -43,11 +43,13 @@
     "apollo-client": "2.6.4",
     "apollo-link": "1.2.13",
     "apollo-link-context": "1.0.19",
+    "apollo-link-error": "^1.1.12",
     "apollo-link-http": "1.5.16",
     "apollo-link-retry": "2.2.15",
     "debug": "4.1.1",
     "idb-localstorage": "0.2.0",
     "offix-cache": "0.9.0",
+    "offix-conflicts-client": "0.9.0",
     "offix-offline": "0.9.0",
     "offix-scheduler": "0.9.0"
   },
