--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offix-offline",
   "version": "0.9.0",
-  "description": "Offix GraphQL Offline package that exposes Apollo Links ",
+  "description": "Offix package that exposes network interfaces",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "scripts": {
@@ -21,28 +21,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@types/debug": "4.1.5",
-    "@types/graphql": "14.2.3",
-    "@types/jest": "24.0.23",
     "del": "5.1.0",
-    "fake-indexeddb": "3.0.0",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
     "jest": "24.9.0",
     "ts-jest": "24.1.0",
     "ts-node": "8.5.2",
     "typescript": "3.7.2"
   },
-  "dependencies": {
-    "apollo-cache-inmemory": "1.6.3",
-    "apollo-client": "2.6.4",
-    "apollo-link": "1.2.13",
-    "apollo-link-error": "1.1.12",
-    "debug": "4.1.1",
-    "idb-localstorage": "0.2.0",
-    "offix-cache": "0.9.0"
-  },
-  "peerDependencies": {
-    "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
-  }
+  "dependencies": {}
 }
