--- a/packages/offix-scheduler/package.json
+++ b/packages/offix-scheduler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-scheduler",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "idb-localstorage": "^0.2.0",
-    "offix-cache": "^0.9.0",
-    "offix-offline": "^0.9.0"
+    "offix-cache": "0.10.0",
+    "offix-offline": "0.10.0"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
