--- a/packages/offix-client-boost/package.json
+++ b/packages/offix-client-boost/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-client-boost",
-  "version": "0.11.0-dev2",
+  "version": "0.11.0",
   "description": "simplifies setup and usage of offix-client",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -23,8 +23,8 @@
     "apollo-link-retry": "^2.2.15",
     "apollo-link-ws": "^1.0.19",
     "apollo-upload-client": "^11.0.0",
-    "offix-client": "0.11.0-dev2",
-    "offix-conflicts-client": "0.11.0-dev2",
+    "offix-client": "0.11.0",
+    "offix-conflicts-client": "0.11.0",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
