--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "cleanInstall": "lerna exec yarn install --ignore-scripts",
     "bootstrap": "lerna bootstrap --no-ci",
-    "lint": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
-    "lint-fix": "tslint '*/*/src/**/*.ts' '*/*/test/**/*.ts' --fix",
+    "lint": "eslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
+    "lint-fix": "eslint '*/*/src/**/*.ts' '*/*/test/**/*.ts' --fix",
     "build": "lerna run build",
     "watch": "lerna run watch",
     "release:prep": "./scripts/prepareRelease.sh",
@@ -29,9 +29,12 @@
   "devDependencies": {
     "@types/graphql": "14.2.3",
     "@types/jest": "24.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "coveralls": "3.0.9",
     "cross-fetch": "3.0.4",
     "del-cli": "3.0.0",
+    "eslint": "^6.8.0",
     "graphql": "14.5.8",
     "lerna": "3.20.2",
     "npm-run-all": "4.1.5",
