--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,7 +64,8 @@
             "double"
         ],
         "@typescript-eslint/no-unused-vars": [
-            "error"
+            "error",
+            { "vars": "all", "args": "none" }
         ],
         "@typescript-eslint/semi": [
             "error",
