--- a/packages/react-offix-hooks/package.json
+++ b/packages/react-offix-hooks/package.json
@@ -31,8 +31,10 @@
     "@types/react": "16.9.19",
     "@types/react-dom": "^16.9.5",
     "apollo-cache": "1.3.4",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
+    "apollo-link-http": "^1.5.16",
     "fake-indexeddb": "^3.0.0",
     "graphql": "14.5.8",
     "jest": "^25.1.0",
