--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -14,11 +14,13 @@
     "@types/react": "^16.8.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
+    "offix-cache": "^0.13.1",
     "offix-client": "^0.13.1",
-    "react": "^16.8.0",
+    "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.8.0",
     "react-offix-hooks": "^0.13.1",
@@ -38,5 +40,9 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "parcel-bundler": "^1.12.4"
+  },
+  "alias": {
+    "react": "react",
+    "local-module": "../../node_modules"
   }
 }
