--- a/packages/react-offix-hooks/package.json
+++ b/packages/react-offix-hooks/package.json
@@ -13,7 +13,7 @@
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map dist types",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "echo 'no tests for now'",
+    "test": "jest",
     "preintegration-test": "cd integration_test && npm install",
     "integration-test": "cd integration_test && npm test"
   },
@@ -26,12 +26,21 @@
     "access": "public"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/jest": "^25.1.1",
     "@types/react": "16.9.19",
+    "@types/react-dom": "^16.9.5",
     "apollo-cache": "1.3.4",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
+    "apollo-link-http": "^1.5.16",
+    "fake-indexeddb": "^3.0.0",
     "graphql": "14.5.8",
-    "react": "16.12.0",
+    "jest": "^25.1.0",
+    "react": "16.9.0",
+    "react-test-renderer": "16.9.0",
+    "ts-jest": "^25.2.0",
     "ts-node": "8.6.2",
     "typescript": "3.7.5"
   },
