--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lerna": "3.20.2",
     "npm-run-all": "4.1.5",
     "nyc": "15.0.0",
+    "react": "^16.12.0",
     "replace": "1.1.5",
     "ts-node": "8.6.2",
     "tslint": "5.20.1",
