--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-react-example",
-  "version": "1.0.0",
+  "version": "0.13.2",
   "main": "index.js",
   "license": "Apache-2.0",
   "private": true,
@@ -19,12 +19,12 @@
     "apollo-link-ws": "^1.0.19",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
-    "offix-cache": "^0.13.1",
-    "offix-client": "^0.13.1",
+    "offix-cache": "0.13.2",
+    "offix-client": "0.13.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.8.0",
-    "react-offix-hooks": "^0.13.1",
+    "react-offix-hooks": "0.13.2",
     "spectre.css": "^0.5.8",
     "subscriptions-transport-ws": "^0.9.16"
   },
