--- a/packages/offix-cache/package.json
+++ b/packages/offix-cache/package.json
@@ -21,9 +21,11 @@
     "typescript": "3.7.5"
   },
   "dependencies": {
+    "@types/traverse": "^0.6.32",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
-    "apollo-utilities": "1.3.3"
+    "apollo-utilities": "1.3.3",
+    "traverse": "0.6.6"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
