--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc lerna run test",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "cleanInstall": "lerna exec yarn install --ignore-scripts",
     "bootstrap": "lerna bootstrap --no-ci",
     "lint": "eslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
@@ -36,11 +36,12 @@
     "del-cli": "3.0.0",
     "eslint": "6.8.0",
     "graphql": "14.5.8",
+    "jest": "^25.1.0",
     "lerna": "3.20.2",
     "npm-run-all": "4.1.5",
-    "nyc": "15.0.0",
     "react": "16.12.0",
     "replace": "1.1.5",
+    "ts-jest": "^25.2.1",
     "ts-node": "8.6.2",
     "tslint": "5.20.1",
     "typedoc": "0.16.8",
@@ -49,13 +50,5 @@
   "dependencies": {
     "@types/mocha": "7.0.1",
     "@types/node": "12.12.25"
-  },
-  "nyc": {
-    "extension": [
-      ".ts"
-    ],
-    "exclude": [
-      "**/*.test.ts"
-    ]
   }
 }
