--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,10 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: install-dependencies
-          command: npm install
-      - run:
-          name: install-package-dependencies
-          command: npm run bootstrap
+          command: yarn
       - run:
           name: run-build
-          command: npm run build
+          command: yarn build
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
@@ -25,16 +22,16 @@ jobs:
       - run:
           # Hoisting will cache some of the packages, but rest needs to be installed separtely
           name: install-package-dependencies-after-cache
-          command: npm run bootstrap
+          command: yarn
       - run:
           name: run lint
-          command: npm run lint
+          command: yarn lint
       - run:
           name: test
-          command: npm test
+          command: yarn test
       - run:
           name: integration test
-          command: cd packages/offix-client && npm run integration-test
+          command: cd packages/offix-client && yarn integration-test
       - store_artifacts:
           path: test-results.xml
           prefix: tests
