fix: lerna config and update contributing guide doc

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,8 @@
     "examples/*",
     "packages/*"
   ],
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "version": "0.13.2",
   "command": {
     "publish": {
