--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -21,8 +21,7 @@
     "graphql-tag": "^2.10.1",
     "offix-cache": "0.13.2",
     "offix-client": "0.13.2",
-    "react": "16.12.0",
-    "react-apollo": "^3.1.3",
+    "react": "^16.13.0",
     "react-dom": "^16.8.0",
     "react-offix-hooks": "0.13.2",
     "spectre.css": "^0.5.8",
