--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "analyze": "source-map-explorer packages/*/dist/*.js packages/*/dist/*/*.js --onlyMapped",
     "test": "jest",
     "coverage": "jest --coverage",
     "cleanInstall": "lerna exec yarn install --ignore-scripts",
@@ -31,20 +32,14 @@
     "@types/jest": "25.1.1",
     "@typescript-eslint/eslint-plugin": "2.22.0",
     "@typescript-eslint/parser": "2.22.0",
-    "coveralls": "3.0.9",
-    "cross-fetch": "3.0.4",
     "del-cli": "3.0.0",
     "eslint": "6.8.0",
-    "graphql": "14.5.8",
     "jest": "25.1.0",
     "lerna": "3.20.2",
     "npm-run-all": "4.1.5",
-    "react": "16.13.0",
-    "replace": "1.1.5",
+    "source-map-explorer": "^2.3.1",
     "ts-jest": "25.2.1",
     "ts-node": "8.6.2",
-    "tslint": "5.20.1",
-    "typedoc": "0.16.8",
     "typescript": "3.7.5"
   },
   "dependencies": {
