--- a/packages/offix-cache/package.json
+++ b/packages/offix-cache/package.json
@@ -18,14 +18,12 @@
     "graphql-tag": "2.10.3",
     "jest": "25.1.0",
     "ts-jest": "25.2.0",
-    "ts-node": "8.6.2",
     "typescript": "3.7.5"
   },
   "dependencies": {
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
-    "apollo-utilities": "1.3.3",
-    "util": "0.12.1"
+    "apollo-utilities": "1.3.3"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
