--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -27,14 +27,14 @@
     "@types/graphql": "14.2.3",
     "@types/jest": "25.1.1",
     "@types/ws": "7.2.0",
-    "del": "5.1.0",
+    "apollo-cache": "^1.3.4",
+    "apollo-utilities": "^1.3.3",
+    "cross-fetch": "^3.0.4",
     "fake-indexeddb": "3.0.0",
-    "fetch-mock": "9.1.0",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.3",
     "jest": "25.1.0",
     "ts-jest": "25.2.0",
-    "ts-node": "8.6.2",
     "typescript": "3.7.5"
   },
   "dependencies": {
@@ -42,11 +42,9 @@
     "apollo-cache-persist": "0.1.1",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
-    "apollo-link-context": "1.0.19",
     "apollo-link-error": "1.1.12",
     "apollo-link-http": "1.5.16",
     "apollo-link-retry": "2.2.15",
-    "debug": "4.1.1",
     "offix-cache": "0.13.2",
     "offix-conflicts-client": "0.13.2",
     "offix-offline": "0.13.2",
