--- a/packages/offix-offline/package.json
+++ b/packages/offix-offline/package.json
@@ -21,10 +21,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "del": "5.1.0",
+    "apollo-link": "^1.2.13",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "jest": "25.1.0",
     "ts-jest": "25.2.0",
-    "ts-node": "8.6.2",
     "typescript": "3.7.5"
   }
 }
