--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -50,7 +50,7 @@
     "offix-conflicts-client": "0.13.2",
     "offix-offline": "0.13.2",
     "offix-scheduler": "0.13.2",
-    "traverse": "^0.6.6"
+    "traverse": "0.6.6"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
