--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -40,5 +40,9 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "parcel-bundler": "^1.12.4"
+  },
+  "alias": {
+    "react": "react",
+    "local_modules": "../../node_modules"
   }
 }
