--- a/packages/offix-client-boost/package.json
+++ b/packages/offix-client-boost/package.json
@@ -8,6 +8,8 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "jest",
+    "size": "size-limit",
+    "size:why": "size-limit --why",
     "preintegration-test": "cd integration_test && yarn install",
     "integration-test": "cd integration_test && yarn run test"
   },
@@ -27,9 +29,11 @@
     "subscriptions-transport-ws": "0.9.16"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.1.1",
     "@types/jest": "25.1.1",
     "@types/node": "12.12.25",
     "jest": "25.1.0",
+    "size-limit": "^4.1.1",
     "ts-jest": "25.2.0",
     "typescript": "3.7.5"
   },
