--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -9,6 +9,8 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "jest",
+    "size": "size-limit",
+    "size:why": "size-limit --why",
     "preintegration-test": "cd integration_test && yarn install",
     "integration-test": "cd integration_test && yarn run test"
   },
@@ -21,6 +23,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.1.1",
     "@types/apollo-upload-client": "8.1.3",
     "@types/debug": "4.1.5",
     "@types/fetch-mock": "7.3.2",
@@ -34,6 +37,7 @@
     "graphql": "14.5.8",
     "graphql-tag": "2.10.3",
     "jest": "25.1.0",
+    "size-limit": "^4.1.1",
     "ts-jest": "25.2.0",
     "typescript": "3.7.5"
   },
