--- a/packages/offix-conflicts-client/package.json
+++ b/packages/offix-conflicts-client/package.json
@@ -7,12 +7,16 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "jest"
+    "test": "jest",
+    "size": "size-limit",
+    "size:why": "size-limit --why"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.1.1",
     "@types/jest": "25.1.1",
     "@types/node": "12.12.25",
     "jest": "25.1.0",
+    "size-limit": "^4.1.1",
     "ts-jest": "25.2.0",
     "typescript": "3.7.5"
   },
