--- a/packages/offix-conflicts-server/package.json
+++ b/packages/offix-conflicts-server/package.json
@@ -7,7 +7,9 @@
         "build": "tsc --build tsconfig.json",
         "watch": "tsc --build tsconfig.json --watch",
         "test": "jest",
-        "compile:clean": "tsc --build tsconfig.json --clean"
+        "compile:clean": "tsc --build tsconfig.json --clean",
+        "size": "size-limit",
+        "size:why": "size-limit --why"
     },
     "license": "Apache-2.0",
     "repository": {
@@ -15,10 +17,12 @@
         "url": "git+https://github.com/aerogear/offix.git"
     },
     "devDependencies": {
+        "@size-limit/preset-small-lib": "^4.1.1",
         "@types/jest": "25.1.1",
         "@types/node": "12.12.25",
         "graphql": "14.5.8",
         "jest": "25.1.0",
+        "size-limit": "^4.1.1",
         "ts-jest": "25.2.0",
         "typescript": "3.7.5"
     },
