--- a/packages/offix-scheduler/package.json
+++ b/packages/offix-scheduler/package.json
@@ -8,7 +8,9 @@
     "clean": "del coverage src/**/*.js src/**/*.map test/**/*.js test/**/*.map dist types",
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "jest --verbose --detectOpenHandles"
+    "test": "jest --verbose --detectOpenHandles",
+    "size": "size-limit",
+    "size:why": "size-limit --why"
   },
   "license": "Apache-2.0",
   "repository": {
@@ -19,6 +21,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.1.1",
     "@types/jest": "25.1.1",
     "@types/json-server": "0.14.2",
     "@types/node-fetch": "2.5.4",
@@ -26,6 +29,7 @@
     "jest": "25.1.0",
     "json-server": "0.15.1",
     "node-fetch": "2.6.0",
+    "size-limit": "^4.1.1",
     "ts-jest": "25.2.0",
     "typescript": "3.7.5"
   },
