--- a/packages/offix-client/package.json
+++ b/packages/offix-client/package.json
@@ -38,6 +38,7 @@
     "typescript": "3.7.5"
   },
   "dependencies": {
+    "@types/traverse": "0.6.32",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-cache-persist": "0.1.1",
     "apollo-client": "2.6.8",
@@ -48,7 +49,8 @@
     "offix-cache": "0.13.2",
     "offix-conflicts-client": "0.13.2",
     "offix-offline": "0.13.2",
-    "offix-scheduler": "0.13.2"
+    "offix-scheduler": "0.13.2",
+    "traverse": "0.6.6"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
