--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "source-map-explorer": "2.3.1",
     "ts-jest": "25.2.1",
     "ts-node": "8.6.2",
-    "typescript": "3.7.5"
+    "typescript": "3.7.5",
+    "pre-commit": "1.2.2"
   },
   "dependencies": {
     "@types/mocha": "7.0.1",
@@ -49,5 +50,9 @@
   "workspaces": [
     "packages/*",
     "examples/*"
+  ],
+  "pre-commit": [
+    "lint",
+    "test"
   ]
 }
