--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "analyze": "source-map-explorer packages/*/dist/*.js packages/*/dist/*/*.js --onlyMapped",
     "test": "jest -w 1",
     "coverage": "jest --coverage",
+    "size": "size-limit",
     "cleanInstall": "lerna exec yarn install --ignore-scripts",
     "bootstrap": "lerna bootstrap --no-ci",
     "lint": "eslint '*/*/src/**/*.ts' '*/*/test/**/*.ts'",
@@ -28,6 +28,7 @@
     "generate:docs": "./scripts/docs.sh"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.1.1",
     "@types/graphql": "14.2.3",
     "@types/jest": "25.1.1",
     "@typescript-eslint/eslint-plugin": "2.22.0",
@@ -37,7 +38,7 @@
     "jest": "25.1.0",
     "lerna": "3.20.2",
     "npm-run-all": "4.1.5",
-    "source-map-explorer": "2.3.1",
+    "size-limit": "^4.1.1",
     "ts-jest": "25.2.1",
     "ts-node": "8.6.2",
     "typescript": "3.7.5"
