--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "size-limit": "^4.1.1",
     "ts-jest": "25.2.1",
     "ts-node": "8.6.2",
-    "typescript": "3.7.5"
+    "typescript": "3.7.5",
+    "pre-commit": "1.2.2"
   },
   "dependencies": {
     "@types/mocha": "7.0.1",
@@ -50,5 +51,9 @@
   "workspaces": [
     "packages/*",
     "examples/*"
+  ],
+  "pre-commit": [
+    "lint",
+    "test"
   ]
 }
