--- a/packages/react-offix-hooks/package.json
+++ b/packages/react-offix-hooks/package.json
@@ -48,7 +48,8 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
-    "offix-client": "0.15.0"
+    "offix-client": "0.15.0",
+    "react": "^16.13.1"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0",
