--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -5,9 +5,9 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "start": "NODE_PATH=../../ parcel serve index.html",
-    "watch": "NODE_PATH=../../ parcel watch index.html",
-    "build": "NODE_PATH=../../ parcel build index.html",
+    "start": "parcel serve index.html",
+    "watch": "parcel watch index.html",
+    "build": "parcel build index.html",
     "lint": "eslint src/* src/**/*"
   },
   "dependencies": {
