--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,8 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "docusaurus deploy",
+    "docs": "docusaurus docs:version"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.50",
