--- a/packages/offix-scheduler/package.json
+++ b/packages/offix-scheduler/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.4.1",
+    "@types/debug": "^4.1.5",
     "@types/jest": "25.1.4",
     "@types/json-server": "0.14.2",
     "@types/node-fetch": "2.5.5",
@@ -34,6 +35,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
+    "debug": "^4.1.1",
     "offix-offline": "0.15.1"
   },
   "peerDependencies": {
