--- a/packages/offix-scheduler/package.json
+++ b/packages/offix-scheduler/package.json
@@ -26,6 +26,14 @@
     "@types/jest": "25.1.4",
     "@types/json-server": "0.14.2",
     "@types/node-fetch": "2.5.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "fake-indexeddb": "3.0.0",
     "jest": "25.5.4",
     "json-server": "0.16.1",
@@ -36,6 +44,7 @@
   },
   "dependencies": {
     "debug": "^4.1.1",
+    "lint": "^0.7.0",
     "offix-offline": "0.15.1"
   },
   "peerDependencies": {
