--- a/packages/offix-datastore/tsconfig.json
+++ b/packages/offix-datastore/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts", "*.d.ts"
   ],
   "compilerOptions": {
+    "esModuleInterop": true,
     "outDir": "./dist/",
     "declarationDir": "./types",
     "lib": [
