Implement save to local store

--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "@types/uuid": "^8.0.0",
     "fake-indexeddb": "^3.0.1",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
@@ -25,6 +26,7 @@
   "dependencies": {
     "@graphql-toolkit/common": "^0.10.7",
     "graphql": "^15.1.0",
-    "graphql-metadata": "^0.6.2"
+    "graphql-metadata": "^0.6.2",
+    "uuid": "^8.1.0"
   }
 }
