--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "offix-react-example",
-  "version": "0.16.0-alpha",
+  "version": "0.15.5",
   "main": "index.js",
   "license": "Apache-2.0",
   "private": true,
@@ -21,11 +21,11 @@
     "graphql": "^14.3.1",
     "graphql-serve": "^0.11.2",
     "graphql-tag": "^2.10.1",
-    "offix-cache": "0.16.0-alpha",
-    "offix-client-boost": "0.16.0-alpha",
+    "offix-cache": "0.15.5",
+    "offix-client-boost": "0.15.5",
     "react": "^16.13.0",
     "react-dom": "^16.8.0",
-    "react-offix-hooks": "0.16.0-alpha",
+    "react-offix-hooks": "0.15.5",
     "spectre.css": "^0.5.8",
     "subscriptions-transport-ws": "^0.9.16"
   },
