--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -15,13 +15,17 @@
   "scripts": {
     "build": "tsc",
     "lint-fix": "eslint \"./src/**/*.ts\" \"./tests/**/*.ts\" --fix",
-    "test": "jest"
+    "test": "jest",
+    "size": "size-limit",
+    "size:why": "size-limit --why"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.5.2",
     "@types/jest": "^25.2.3",
     "@types/uuid": "^8.0.0",
     "fake-indexeddb": "^3.0.1",
     "jest": "^26.0.1",
+    "size-limit": "^4.5.2",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
