--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -12,22 +12,14 @@
     "lint": "eslint src/* src/**/*"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
     "@types/react": "^16.8.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.4",
-    "apollo-link-http": "^1.5.16",
-    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.3.1",
-    "graphql-serve": "^0.11.2",
+    "graphql-serve": "0.14.0-alpha11",
     "graphql-tag": "^2.10.1",
-    "offix-cache": "0.15.0",
-    "offix-client": "0.15.0",
+    "offix-datastore": "^0.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.8.0",
-    "react-offix-hooks": "0.15.0",
-    "spectre.css": "^0.5.8",
-    "subscriptions-transport-ws": "^0.9.16"
+    "spectre.css": "^0.5.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
