--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -16,6 +16,7 @@
     "build": "tsc",
     "lint-fix": "eslint \"./src/**/*.ts\" \"./tests/**/*.ts\" --fix",
     "test": "jest",
+    "watch": "tsc --watch",
     "size": "size-limit",
     "size:why": "size-limit --why"
   },
