fix: add missing dependencies

--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "graphql-tag": "2.10.4",
     "offix-scheduler": "^0.15.5",
+    "subscriptions-transport-ws": "^0.9.17",
     "urql": "1.9.8",
     "uuid": "8.2.0",
+    "wonka": "^4.0.14",
     "zen-observable": "0.8.15"
   }
 }
