small name changes

--- a/packages/offix-datasync-codegen/package.json
+++ b/packages/offix-datasync-codegen/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@offix/datasync-plugin",
+  "name": "@offix/datasync-client-plugin",
   "version": "0.1.0",
-  "description": "Graphback plugin for offix-datasync ",
+  "description": "Graphback plugin for offix-datasync-client",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "typescript": {
