Setup graphback-cli in sample app

--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "graphback-cli": "^0.14.0",
+    "offix-datasync-client-plugin": "~0.1.0"
   }
 }
