--- a/packages/offix-datasync-codegen/package.json
+++ b/packages/offix-datasync-codegen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@offix/datasync-client-plugin",
+  "name": "offix-datasync-client-plugin",
   "version": "0.1.0",
   "description": "Graphback plugin for offix-datasync-client",
   "main": "dist/index.js",
