--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -20,16 +20,28 @@
     "size": "size-limit",
     "size:why": "size-limit --why"
   },
+  "peerDependencies": {
+    "react": "^16.13.1"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.5.5",
     "@types/jest": "25.2.3",
     "@types/json-schema": "7.0.5",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "@types/uuid": "8.0.0",
     "apollo-server": "2.16.1",
     "debug": "4.1.1",
     "fake-indexeddb": "3.1.2",
     "isomorphic-unfetch": "3.0.0",
     "jest": "26.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "size-limit": "4.5.5",
     "supports-color": "7.1.0",
     "ts-jest": "26.1.4",
