Traverse queue and replace all instances of client id

--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "25.2.3",
     "@types/json-schema": "7.0.5",
     "@types/react-dom": "^16.9.8",
+    "@types/traverse": "^0.6.32",
     "@types/uuid": "8.0.0",
     "apollo-server": "2.16.1",
     "debug": "4.1.1",
@@ -50,6 +51,7 @@
     "graphql-tag": "2.10.4",
     "subscriptions-transport-ws": "0.9.17",
     "tiny-invariant": "1.1.0",
+    "traverse": "^0.6.6",
     "urql": "1.9.8",
     "uuid": "8.3.0",
     "wonka": "4.0.14",
