chore: add sqlite adapter (#692)
Co-authored-by: Wojciech Trocki <wtrocki@redhat.com>

--- a/packages/offix-datastore/tsconfig.json
+++ b/packages/offix-datastore/tsconfig.json
@@ -12,6 +12,11 @@
       "es2015",
       "dom",
       "es2016"
-    ]
+    ],
+    "types": [
+      "websql",
+      "jest",
+      "node"
+    ],
   }
 }
