Implement in-memory generator

--- a/packages/datastore/datastore-codegen/package.json
+++ b/packages/datastore/datastore-codegen/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "offix-datasync-client-plugin",
+  "name": "datastore-cli",
   "version": "0.1.2",
-  "description": "Graphback plugin for offix-datasync-client",
+  "description": "CLI tool for Datastore",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "typescript": {
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "26.0.10",
+    "@types/yargs": "^15.0.5",
     "jest": "26.4.0",
     "rimraf": "3.0.2",
     "ts-jest": "26.2.0",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@graphback/core": "0.15.1",
-    "graphql-metadata": "0.7.3"
+    "graphql-metadata": "0.7.3",
+    "yargs": "^15.4.1"
   }
 }
