Test generated type

--- a/packages/datastore/datastore-codegen/package.json
+++ b/packages/datastore/datastore-codegen/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "yarn build&&jest",
     "lint-fix": "eslint \"./src/*\" --fix"
   },
   "license": "MIT",
