fix: split cmd and package main

--- a/packages/datastore/cli/package.json
+++ b/packages/datastore/cli/package.json
@@ -8,7 +8,7 @@
     "definition": "types/index.d.ts"
   },
   "bin": {
-    "offix": "dist/index.js"
+    "offix": "bin/offix.js"
   },
   "scripts": {
     "build": "tsc",
